Name: Cabal
Version: 1.3.3
Copyright: 2003-2006, Isaac Jones
License: BSD3
License-File: LICENSE
Author: Isaac Jones <ijones@syntaxpolice.org>
Maintainer: cabal-devel@haskell.org
Homepage: http://www.haskell.org/cabal/
Synopsis: A framework for packaging Haskell software
Description:
        The Haskell Common Architecture for Building Applications and
        Libraries: a framework defining a common interface for authors to more
        easily build their Haskell applications in a portable way.
        .
        The Haskell Cabal is meant to be a part of a larger infrastructure
        for distributing, organizing, and cataloging Haskell libraries
        and tools.
Category: Distribution
Build-Type: Custom
-- Even though we do use the default Setup.lhs it's vital to bootstrapping
-- that we build Setup.lhs using our own local Cabal source code.

Extra-Source-Files:
        mkGHCMakefile.sh Distribution/Simple/GHC/Makefile.in

Flag small_base
  Description: Choose the new smaller, split-up base package.

Library
  if flag(small_base)
    Build-Depends: base >= 3, pretty, directory, old-time, process, containers
  else
    Build-Depends: base < 3
  Build-Depends: filepath

  if impl(ghc < 6.3)
    Build-Depends: unix

  GHC-Options: -Wall
  CPP-Options: "-DCABAL_VERSION=1,3,3"
  nhc98-Options: -K4M

  Exposed-Modules:
        Distribution.Compiler,
        Distribution.Extension,
        Distribution.Setup,
        Distribution.InstalledPackageInfo,
        Distribution.License,
        Distribution.Make,
        Distribution.Package,
        Distribution.PackageDescription,
        Distribution.PackageDescription.Configuration,
        Distribution.PackageDescription.Parse,
        Distribution.PackageDescription.QA,
        Distribution.ParseUtils,
        Distribution.Simple,
        Distribution.Simple.Build,
        Distribution.Simple.BuildPaths,
        Distribution.Simple.Command,
        Distribution.Simple.Compiler,
        Distribution.Simple.Configure,
        Distribution.Simple.GHC,
        Distribution.Simple.GHC.Makefile,
        Distribution.Simple.Haddock,
        Distribution.Simple.Hugs,
        Distribution.Simple.Install,
        Distribution.Simple.InstallDirs,
        Distribution.Simple.JHC,
        Distribution.Simple.LocalBuildInfo,
        Distribution.Simple.NHC,
        Distribution.Simple.PreProcess,
        Distribution.Simple.PreProcess.Unlit,
        Distribution.Simple.Program,
        Distribution.Simple.Register,
        Distribution.Simple.Setup,
        Distribution.Simple.SetupWrapper,
        Distribution.Simple.SrcDist,
        Distribution.Simple.UserHooks,
        Distribution.Simple.Utils,
        Distribution.System,
        Distribution.Verbosity,
        Distribution.Version,
        Distribution.Compat.ReadP,
        Language.Haskell.Extension

  Other-Modules:
        Distribution.GetOpt,
        Distribution.Compat.TempFile

  Extensions: CPP
