Name: Cabal
Version: 1.6.0.1
Copyright: 2003-2006, Isaac Jones
           2005-2008, Duncan Coutts
License: BSD3
License-File: LICENSE
Author: Isaac Jones <ijones@syntaxpolice.org>
        Duncan Coutts <duncan@haskell.org>
Maintainer: cabal-devel@haskell.org
Homepage: http://www.haskell.org/cabal/
--bug-reports: http://hackage.haskell.org/trac/hackage/
Synopsis: A framework for packaging Haskell software
Description:
        The Haskell Common Architecture for Building Applications and
        Libraries: a framework defining a common interface for authors to more
        easily build their Haskell applications in a portable way.
        .
        The Haskell Cabal is part of a larger infrastructure for distributing,
        organizing, and cataloging Haskell libraries and tools.
Category: Distribution
Build-Type: Custom
-- Even though we do use the default Setup.lhs it's vital to bootstrapping
-- that we build Setup.lhs using our own local Cabal source code.

Extra-Source-Files:
        README changelog
        Distribution/Simple/GHC/mkGHCMakefile.sh
        Distribution/Simple/GHC/Makefile.in

--source-repository head
--  type:     darcs
--  location: http://darcs.haskell.org/cabal/

Flag base4
    Description: Choose the even newer, even smaller, split-up base package.

Flag base3
    Description: Choose the new smaller, split-up base package.

Library
  if flag(base4)
    Build-Depends: base       >= 4   && < 5
  if flag(base3)
    Build-Depends: base       >= 3   && < 4
  if !flag(base3) && !flag(base4)
    Build-Depends: base       < 3

  if flag(base3) || flag(base4)
    Build-Depends: directory  >= 1   && < 1.1,
                   process    >= 1   && < 1.1,
                   old-time   >= 1   && < 1.1,
                   containers >= 0.1 && < 0.3,
                   array      >= 0.1 && < 0.3,
                   pretty     >= 1   && < 1.1
  Build-Depends: filepath >= 1 && < 1.2

  GHC-Options: -Wall
  CPP-Options: "-DCABAL_VERSION=1,6,0,1"
  nhc98-Options: -K4M

  Exposed-Modules:
        Distribution.Compiler,
        Distribution.InstalledPackageInfo,
        Distribution.License,
        Distribution.Make,
        Distribution.ModuleName,
        Distribution.Package,
        Distribution.PackageDescription,
        Distribution.PackageDescription.Configuration,
        Distribution.PackageDescription.Parse,
        Distribution.PackageDescription.Check,
        Distribution.ParseUtils,
        Distribution.ReadE,
        Distribution.Simple,
        Distribution.Simple.Build,
        Distribution.Simple.Build.Macros,
        Distribution.Simple.Build.PathsModule,
        Distribution.Simple.BuildPaths,
        Distribution.Simple.Command,
        Distribution.Simple.Compiler,
        Distribution.Simple.Configure,
        Distribution.Simple.GHC,
        Distribution.Simple.Haddock,
        Distribution.Simple.Hugs,
        Distribution.Simple.Install,
        Distribution.Simple.InstallDirs,
        Distribution.Simple.JHC,
        Distribution.Simple.LocalBuildInfo,
        Distribution.Simple.NHC,
        Distribution.Simple.PackageIndex,
        Distribution.Simple.PreProcess,
        Distribution.Simple.PreProcess.Unlit,
        Distribution.Simple.Program,
        Distribution.Simple.Register,
        Distribution.Simple.Setup,
        Distribution.Simple.SrcDist,
        Distribution.Simple.UserHooks,
        Distribution.Simple.Utils,
        Distribution.System,
        Distribution.Text,
        Distribution.Verbosity,
        Distribution.Version,
        Distribution.Compat.ReadP,
        Language.Haskell.Extension

  Other-Modules:
        Distribution.GetOpt,
        Distribution.Compat.Exception,
        Distribution.Compat.Permissions,
        Distribution.Compat.TempFile,
        Distribution.Simple.GHC.Makefile,
        Distribution.Simple.GHC.IPI641,
        Distribution.Simple.GHC.IPI642

  Extensions: CPP
