cabal-version: 2.2
name:          Cabal-QuickCheck
version:       3.13.0.0
synopsis:      QuickCheck instances for types in Cabal
category:      Testing
build-type:    Simple
description:
  Provides QuickCheck Arbitrary instances for some types in Cabal

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , base
    , bytestring
    , Cabal         ^>=3.13.0.0
    , Cabal-syntax  ^>=3.13.0.0
    , QuickCheck    ^>=2.13.2 || ^>=2.14

  exposed-modules:
    Test.QuickCheck.GenericArbitrary
    Test.QuickCheck.Instances.Cabal
