cabal-version: 2.2
name:          Cabal-described
version:       3.5.0.0
synopsis:      Described functionality for types in Cabal
category:      Testing, Parsec
description:   Provides rere bindings

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , base
    , Cabal             ^>=3.5.0.0
    , containers
    , pretty
    , QuickCheck
    , rere              >=0.1 && <0.3
    , tasty
    , tasty-quickcheck
    , transformers

  if !impl(ghc >=7.10)
    build-depends: void

  if !impl(ghc >=7.8)
    build-depends: tagged ^>=0.8.5

  exposed-modules:
    Distribution.Described
    Distribution.Utils.CharSet
    Distribution.Utils.GrammarRegex
