cabal-version: 2.2
name:          Cabal-described
version:       3.13.0.0
synopsis:      Described functionality for types in Cabal
category:      Testing, Parsec
description:   Provides rere bindings
build-type:    Simple

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , base
    , Cabal             ^>=3.13.0.0
    , Cabal-syntax      ^>=3.13.0.0
    , containers
    , pretty
    , QuickCheck
    , rere              >=0.1 && <0.3
    , tasty
    , tasty-quickcheck

  exposed-modules:
    Distribution.Described
    Distribution.Utils.CharSet
    Distribution.Utils.GrammarRegex
