cabal-version: 3.6
name:          Cabal-hooks
version:       3.17
copyright:     2025, Cabal Development Team
license:       BSD-3-Clause
license-file:  LICENSE
author:        Cabal Development Team <cabal-devel@haskell.org>
maintainer:    cabal-devel@haskell.org
homepage:      http://www.haskell.org/cabal/
bug-reports:   https://github.com/haskell/cabal/issues
synopsis:      API for the Hooks build-type
description:
  User-facing API for the Hooks build-type.
category:       Distribution
build-type:     Simple

extra-doc-files:
  README.md CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/haskell/cabal/
  subdir:   Cabal-hooks

library
  default-language: Haskell2010
  hs-source-dirs: src

  build-depends:
    , Cabal-syntax    >= 3.17      && < 3.18
    , Cabal           >= 3.17      && < 3.18
    , base            >= 4.13      && < 5
    , containers      >= 0.5.0.0   && < 0.9
    , transformers    >= 0.5.6.0   && < 0.7

  ghc-options: -Wall -fno-ignore-asserts -Wtabs -Wincomplete-uni-patterns -Wincomplete-record-updates

  exposed-modules:
    Distribution.Simple.SetupHooks

  other-extensions:
    BangPatterns
    CPP
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImplicitParams
    KindSignatures
    LambdaCase
    NondecreasingIndentation
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    Trustworthy
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
